Change three.js include to cdn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Skytime</title>
         <link rel="stylesheet" href="styles.css">
-        <script type="text/javascript" src="three.js-master/build/three.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     </head>
     <body>
         <div id="world">
